# unreal-animation-mcp

./: CLAUDE.md  README.md  pyproject.toml
src/unreal_animation_mcp/: __init__.py  __main__.py  config.py  editor_bridge.py  server.py
src/unreal_animation_mcp/helpers/: animation_helpers.py
tests/: test_server.py
